--- a/index.html
+++ b/index.html
@@ -131,16 +131,16 @@
         <div class="row message">
             <div class="col-md-12">
                 <p>Happy 17th Birthday Jaan ❤️</p>
-                <p>It’s wild to think that this is your last year before the world starts calling you an adult.</p>
-                <p>It feels so special to celebrate this day with you. <p>
+                <p>It’s wild to think that this is your last year before the world starts calling you an adult</p>
+                <p>It feels so special to celebrate this day with you.<p>
 				<p>I still remember when we first met—you were 16,and today, you’re turning 17. You’re officially growing up!<p>
-				<p>Watching you grow and being a part of your life has been the best part of my last few months.<p>
-				<p>Enjoy your day to the fullest, Jaan ❤️. You deserve all the happiness in the universe.<p>
+				<p>Watching you grow and being a part of your life has been the best part of my last few months<p>
+				<p>Enjoy your day to the fullest, Jaan❤️.You deserve all the happiness in the universe.<p>
                 <p>that makes everything better the second you show up Cutu ❤️.</p>
                 <p><strong>I love you a lot❤️❤️But You love Chika anyways Mwahhhhhhhh amar jaanbaccha❤️</strong></p>
                 <p>Happy Birthday again Makfi pakhi!❤️</p>
 				<p>beshi kichu korte parlam na tmr jonno tar jonno sorry ajke meet korte parle hoyto pura din ta aro special kortam tmr <p>
-			    <p>Suvo hok apnar ajker and shamner din gula <p>❤️
+			    <p>Suvo hok apnar ajker and shamner din gulo<p>TATA❤️
             </div>
         </div>
 
